fixed non visible bottom bar on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .body-wrapper {
-	height: 100vh;
+	height: 100dvh;
 	display: flex;
 	flex-direction: column;
 
